cmake_minimum_required(VERSION 3.14)
project(Bai1 C)

set(CMAKE_C_STANDARD 99)

add_executable(NguyenXuanHuy_T1907M_TH1907020_LBEP_1308_Bai_1 "NguyenXuanHuy_T1907M_TH1907020/LBEP_1308/Bai_1/main.c")
add_executable(NguyenXuanHuy_T1907M_TH1907020_LBEP_1308_Bai_2 "NguyenXuanHuy_T1907M_TH1907020/LBEP_1308/Bai_2/main.c")